[package]
name = "revm_example"
version = "0.1.0"
edition = "2021"

[dependencies]
hex-literal = "0.4"
hex = "0.4.3"
bytes = "1.4.0"
anyhow = "1.0.71"
futures = { version = "0.3.27" }
tokio = { version = "1.28", features = [
    "rt-multi-thread",
    "macros",
] }

# ethersdb
ethers-providers = { version = "2.0" }
ethers-core = { version = "2.0" }
ethers-contract = { version = "2.0.3", default-features = false }

# revm
revm = { git = "https://github.com/bluealloy/revm/", features = ["ethersdb"] }
revm-primitives = { git = "https://github.com/bluealloy/revm/" }